1、更新sdk，取消sdk自身申请音频焦点; 2、修复驾驶员中心去绑定时，未退登问题; 3、修复语音播报后，二次交互时小欧形象退出问题; 4、修改驾驶员中心绑定app服务时，app进程不自杀，驾驶员中心退出后，app服务退出; 5、修复历史记录第一次全选后，取消编辑 ，再次编辑，点击删除时，删除成功问题。

--- a/iqiyi/build.gradle
+++ b/iqiyi/build.gradle
@@ -12,7 +12,7 @@ android {
         applicationId "com.oushang.iqiyi"
         minSdkVersion 26
         targetSdkVersion 30
-        versionCode 100082
+        versionCode 100083
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
         ndk {
@@ -187,6 +187,6 @@ dependencies {
     /**
      * voicebridge
      */
-    implementation 'com.oushang:voicebridge:1.0.25-SNAPSHOT'
+    implementation ('com.oushang:voicebridge:1.0.25-SNAPSHOT')
 
 }
