1、修复账号绑定成功后，未上传到欧尚后台问题; 2、增加“退出全屏”语音唤醒功能; 3、替换爱奇艺应用图标。

--- a/iqiyi/src/main/AndroidManifest.xml
+++ b/iqiyi/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
     <application
         android:name=".MainApplication"
         android:allowBackup="false"
-        android:icon="@drawable/ic_iqiyi"
+        android:icon="@drawable/ic_iqiyi_icon"
         android:label="@string/app_name"
         android:roundIcon="@drawable/ic_launcher_round"
         android:supportsRtl="true"
